# SuiScope

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  output.rs
crates/cli/src/commands/: dashboard.rs  explain.rs  get.rs  init.rs  inspect.rs  list.rs  mod.rs  publish.rs  sync.rs  tag.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  db.rs  error_dict.rs  errors.rs  lib.rs  parser.rs  rpc.rs  types.rs  walrus.rs
crates/dashboard/: Cargo.toml  build.rs
crates/dashboard/public/: __next._full.txt  __next._tree.txt  index.html
crates/dashboard/public/404/: index.html
crates/dashboard/public/_next/static/chunks/: 0hpctnisnlil5.js  14--jp9qvm6tc.js  23yfkspwq6p8c.css  27fnryzt4tfex.js  2v7c6i4jq2ze7.js  3cnhdrxhrk7v9.js  turbopack-015_2qp0r0l3_.js
crates/dashboard/public/_not-found/: __next._head.txt  __next._tree.txt  index.txt
crates/dashboard/public/_not-found/__next._not-found/: __PAGE__.txt
crates/dashboard/public/dashboard/: __next._index.txt  __next._tree.txt  __next.dashboard.txt  index.html  index.txt
crates/dashboard/public/dashboard/__next.dashboard/: __PAGE__.txt
crates/dashboard/public/login/: __next._full.txt  __next._head.txt  __next._tree.txt  index.html
crates/dashboard/public/login/__next.login/: __PAGE__.txt
crates/dashboard/src/: lib.rs  main.rs
frontend/: next.config.ts  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/lib/: api.ts
