[package]
name = "suiscope-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "SuiScope CLI — Move Contract Debug & Object Registry Tool"

[[bin]]
name = "suiscope"
path = "src/main.rs"

[dependencies]
suiscope-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
colored = "2"
tabled = "0.16"
tokio.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono.workspace = true
