[package]
name = "suiscope-dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "SuiScope Dashboard — Local web UI for the object registry"

[[bin]]
name = "suiscope-dashboard"
path = "src/main.rs"

[dependencies]
suiscope-core = { version = "0.1.0", path = "../core" }
axum = "0.7"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
anyhow = "1"
